Avoid flickering in case of dynamic loading of elements with inline styles by "caching" new css properties into separate stylesheet with selector that matches by old style attribute. fixes #75

--- a/data/methods/base.css
+++ b/data/methods/base.css
@@ -214,10 +214,6 @@ groupbox#dialogBox { /* about:preferences dialogs */
     .video-annotations .annotation-shape svg path[fill="#7c54ae"] { fill: #7c54ae !important; }
     .video-annotations .annotation-shape svg path[fill="#afecd1"] { fill: #4d6758 !important; }
     .video-annotations .annotation-shape svg path[fill="#403e9a"] { fill: #403e9a !important; }
-
-    .captions-text span[style*="background: rgba(255, 255, 255, 0.75)"] {
-        background-color: black !important;
-    }
     {if_dark_background_end}
 }
 
